2009-03-21  Les Harris  <lharris@gnome.org>

	* src/mud-connection-view.c (mud_connection_view_disconnect),
	(mud_connection_view_reconnect), (mud_connection_view_send): Now stops
	logging on disconnect and reconnect. Added log write hook in send.
	* src/mud-log.c (mud_log_class_init), (mud_log_init),
	(mud_log_get_property), (mud_log_append_toggled_cb),
	(mud_log_input_toggled_cb), (mud_log_color_toggled_cb),
	(mud_log_open): Can no longer append and include color. A new file
	must be written.  Now logs input as a default.
	* ui/main.glade: Added Log Input checkbox in log window.

2009-03-21  Les Harris  <lharris@gnome.org>

	* src/mud-log.c: Generates the xterm-256 colors rather than manually
	creating them.

2009-03-21  Les Harris  <lharris@gnome.org>

	* src/ecma48.h: Added xterm color sequences.
	* src/mud-log.c: Now supports logging xterm-256 color codes in
	addition to the ECMA-48 codes.

2009-03-21  Les Harris  <lharris@gnome.org>

	* src/ecma48.h: New file with some ECMA-48 definitions.
	* src/mud-log.c: When color is to be logged, it now parses the ecma-48
	codes and emits an html file rather than the raw color information.

2009-03-21  Les Harris  <lharris@gnome.org>

	* src/mud-log.c (mud_log_open), (mud_log_close), (mud_log_write):  Now
	fsyncs after writes and before closing.

2009-03-21  Les Harris  <lharris@gnome.org>

	* src/mud-log.c (mud_log_next_toggled_cb),
	(mud_log_prev_toggled_cb): Grab spinbutton focus when toggled on.
	* ui/main.glade: Made minimum value of log spinbuttons 1.

2009-03-21  Les Harris  <lharris@gnome.org>

	* src/mud-connection-view.c: Made 'logging' property writable.
	* src/mud-line-buffer.c (mud_line_buffer_add_data):
	* src/mud-log.c: Vastly improved our logging facilities. Can choose to
	include the entire existing buffer before starting, or just a few
	lines.  Can choose only to log for the next N lines.  Can choose to
	append or overwrite the mud file.  Can choose to not strip the ECMA-48